feat: leftovers after rebase

--- a/modules/end-user-guide/pages/selecting-an-in-browser-ide-for-all-workspaces-that-clone-the-same-git-repository.adoc
+++ b/modules/end-user-guide/pages/selecting-an-in-browser-ide-for-all-workspaces-that-clone-the-same-git-repository.adoc
@@ -4,7 +4,7 @@
 :keywords: select-IDE, che-editor, che-editor-yaml
 :page-aliases: specifying-an-in-browser-ide-for-a-git-repository-by-using-che-editor.yaml.adoc
 
-[id="selecting-an-in-browser-ide-for-all-workspaces-that-clone-the-same-git-repository_{context}"]
+[id="selecting-an-in-browser-ide-for-all-workspaces-that-clone-the-same-git-repository"]
 = Selecting an in-browser IDE for all workspaces that clone the same Git repository
 
 include::partial$proc_setting-up-che-editor-yaml.adoc[leveloffset=+1]
