--- a/modules/end-user-guide/pages/selecting-an-in-browser-ide-for-one-new-workspace.adoc
+++ b/modules/end-user-guide/pages/selecting-an-in-browser-ide-for-one-new-workspace.adoc
@@ -4,7 +4,7 @@
 :navtitle: Selecting an in-browser IDE for one new workspace
 :page-aliases: selecting-an-ide-by-using-a-url-parameter.adoc
 
-[id="selecting-an-in-browser-ide-for-one-new-workspace_{context}"]
+[id="selecting-an-in-browser-ide-for-one-new-workspace"]
 = Selecting an in-browser IDE for one new workspace
 
 You can select your preferred in-browser IDE when using a URL for starting a new workspace. This way, each developer using {prod-short} can start a workspace with a clone of the same project repository and the personal choice of the in-browser IDE.
