--- a/modules/end-user-guide/partials/proc_setting-up-che-editor-yaml.adoc
+++ b/modules/end-user-guide/partials/proc_setting-up-che-editor-yaml.adoc
@@ -1,4 +1,4 @@
-[id="setting-up-che-editor-yaml_{context}"]
+[id="setting-up-che-editor-yaml"]
 = Setting up che-editor.yaml
 
 To define the same in-browser IDE for all workspaces that will clone the same remote Git repository of your project, you can use the `che-editor.yaml` file.
