--- a/modules/end-user-guide/pages/url-parameter-for-the-workspace-storage.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-the-workspace-storage.adoc
@@ -21,6 +21,8 @@ pass:c,a,q[{prod-url}]#__<git_repository_url>__?storageType=__<storage_type>__ <
 * `per-user` (persistent)
 * `per-workspace` (persistent)
 
+TIP: With the `ephemeral` or `per-workspace` storage type, you can run multiple workspaces concurrently, which is not possible with the default `per-user` storage type.
+
 .Additional resources
 
 * xref:requesting-persistent-storage-for-workspaces.adoc[]
