--- a/modules/administration-guide/partials/proc_cleaning-up-postgresql.adoc
+++ b/modules/administration-guide/partials/proc_cleaning-up-postgresql.adoc
@@ -11,7 +11,7 @@ include::partial$snip_finding-postgresql-pod.adoc[]
 
 include::partial$snip_finding-che-database-name.adoc[]
 
-. Drop {identity-provider} database:
+. Drop the {identity-provider} database:
 +
 [subs="+quotes,+attributes"]
 ----
