--- a/modules/administration-guide/partials/proc_cleaning-up-postgresql.adoc
+++ b/modules/administration-guide/partials/proc_cleaning-up-postgresql.adoc
@@ -18,7 +18,7 @@ include::partial$snip_finding-che-database-name.adoc[]
 {orch-cli} exec -it $POSTGRES_POD -n {prod-namespace}  -- bash  -c "dropdb keycloak"
 ----
 
-. Create {identity-provider} database:
+. Create the {identity-provider} database:
 +
 [subs="+quotes,+attributes"]
 ----
