--- a/modules/administration-guide/partials/proc_cleaning-up-postgresql.adoc
+++ b/modules/administration-guide/partials/proc_cleaning-up-postgresql.adoc
@@ -25,7 +25,7 @@ include::partial$snip_finding-che-database-name.adoc[]
 {orch-cli} exec -it $POSTGRES_POD -n {prod-namespace}  -- bash  -c "psql postgres -tAc \"CREATE DATABASE keycloak\""
 ----
 
-. Drop {prod-short} database:
+. Drop the {prod-short} database:
 +
 [subs="+quotes,+attributes"]
 ----
