--- a/modules/administration-guide/partials/proc_cleaning-up-postgresql.adoc
+++ b/modules/administration-guide/partials/proc_cleaning-up-postgresql.adoc
@@ -29,7 +29,7 @@ include::partial$snip_finding-che-database-name.adoc[]
 +
 [subs="+quotes,+attributes"]
 ----
-{orch-cli} exec -it $POSTGRES_POD -n {prod-namespace}  -- bash  -c "dropdb $CHE_POSTGRES_DB"
+$ {orch-cli} exec -it $POSTGRES_POD -n {prod-namespace}  -- bash  -c "dropdb $CHE_POSTGRES_DB"
 ----
 
 . Create {prod-short} database:
