--- a/modules/administration-guide/partials/proc_cleaning-up-postgresql.adoc
+++ b/modules/administration-guide/partials/proc_cleaning-up-postgresql.adoc
@@ -32,7 +32,7 @@ include::partial$snip_finding-che-database-name.adoc[]
 $ {orch-cli} exec -it $POSTGRES_POD -n {prod-namespace}  -- bash  -c "dropdb $CHE_POSTGRES_DB"
 ----
 
-. Create {prod-short} database:
+. Create the {prod-short} database:
 +
 [subs="+quotes,+attributes"]
 ----
