--- a/modules/administration-guide/partials/proc_cleaning-up-postgresql.adoc
+++ b/modules/administration-guide/partials/proc_cleaning-up-postgresql.adoc
@@ -36,6 +36,6 @@ $ {orch-cli} exec -it $POSTGRES_POD -n {prod-namespace}  -- bash  -c "dropdb $CH
 +
 [subs="+quotes,+attributes"]
 ----
-{orch-cli} exec -it $POSTGRES_POD -n {prod-namespace}  -- bash  -c "psql postgres -tAc \"CREATE DATABASE $CHE_POSTGRES_DB\""
+$ {orch-cli} exec -it $POSTGRES_POD -n {prod-namespace}  -- bash  -c "psql postgres -tAc \"CREATE DATABASE $CHE_POSTGRES_DB\""
 ----
 
