--- a/modules/administration-guide/partials/proc_backuping-postgresql.adoc
+++ b/modules/administration-guide/partials/proc_backuping-postgresql.adoc
@@ -23,7 +23,7 @@ include::partial$snip_finding-che-database-name.adoc[]
 {orch-cli} cp {prod-namespace}/$POSTGRES_POD:/tmp/che.sql che.sql
 ----
 
-. Backup {identity-provider} database:
+. Back up the {identity-provider} database:
 +
 [subs="+quotes,+attributes"]
 ----
