--- a/modules/administration-guide/partials/proc_backuping-postgresql.adoc
+++ b/modules/administration-guide/partials/proc_backuping-postgresql.adoc
@@ -15,7 +15,7 @@ include::partial$snip_finding-postgresql-pod.adoc[]
 
 include::partial$snip_finding-che-database-name.adoc[]
 
-. Backup {prod-short} database:
+. Back up the {prod-short} database:
 +
 [subs="+quotes,+attributes"]
 ----
