--- a/modules/end-user-guide/examples/snip_che-table-of-supported-editors.adoc
+++ b/modules/end-user-guide/examples/snip_che-table-of-supported-editors.adoc
@@ -1,14 +1,6 @@
-| link:https://github.com/eclipse-che/che-theia[Che-Theia]
-| `eclipse/che-theia/latest`
-| This is the default IDE that loads in a new workspace when the URL parameter or `che-editor.yaml` is not used.
-
-| link:https://github.com/eclipse-che/che-theia[Che-Theia]
-| `eclipse/che-theia/next`
-| When using the `next` link:https://github.com/che-incubator/chectl/[chectl] channel, this IDE loads as a default without the URL parameter.
-
 | link:https://github.com/che-incubator/che-code[Visual Studio Code - Open Source]
 | `che-incubator/che-code/insiders`
-| Visual Studio Code Insiders version packaged to run on Kubernetes
+| This is the default IDE that loads in a new workspace when the URL parameter or `che-editor.yaml` is not used.
 
 | link:https://www.jetbrains.com/help/idea/discover-intellij-idea.html[IntelliJ IDEA]
 | `che-incubator/che-idea/latest`
@@ -25,3 +17,11 @@
 | link:https://www.jetbrains.com/help/pycharm/quick-start-guide.html[PyCharm]
 | `che-incubator/che-pycharm/next`
 | Community Edition - development version
+
+| link:https://github.com/eclipse-che/che-theia[Che-Theia]
+| `eclipse/che-theia/latest`
+| Stable version. Deprecated, will be removed in next releases.
+
+| link:https://github.com/eclipse-che/che-theia[Che-Theia]
+| `eclipse/che-theia/next`
+| Development version. Deprecated, will be removed in next releases.
