--- a/modules/end-user-guide/pages/selecting-a-workspace-ide.adoc
+++ b/modules/end-user-guide/pages/selecting-a-workspace-ide.adoc
@@ -7,7 +7,7 @@
 [id="selecting-a-workspace-ide"]
 = Selecting a workspace IDE
 
-The default in-browser IDE in a new workspace is link:https://theia-ide.org/docs/[Che Theia]. In addition, link:https://github.com/che-incubator/che-code[Visual Studio Code] is available as a link:https://access.redhat.com/support/offerings/techpreview[Technology Preview] feature for non-restricted environments.
+The default in-browser IDE in a new workspace is link:https://github.com/che-incubator/che-code[Visual Studio Code]. In addition, link:https://github.com/che-incubator/jetbrains-editor-images[JetBrains IntelliJ IDEA and PyCharm] are available as a link:https://access.redhat.com/support/offerings/techpreview[Technology Preview] feature. link:https://theia-ide.org/docs/[Che Theia] is available as well but is planned to be removed in next releases.
 
 You can select another supported in-browser IDE by either method:
 
