--- a/modules/end-user-guide/pages/selecting-a-workspace-ide.adoc
+++ b/modules/end-user-guide/pages/selecting-a-workspace-ide.adoc
@@ -7,7 +7,7 @@
 [id="selecting-a-workspace-ide"]
 = Selecting a workspace IDE
 
-The default in-browser IDE in a new workspace is link:https://github.com/che-incubator/che-code[Visual Studio Code]. In addition, link:https://github.com/che-incubator/jetbrains-editor-images[JetBrains IntelliJ IDEA and PyCharm] are available as a link:https://access.redhat.com/support/offerings/techpreview[Technology Preview] feature. link:https://theia-ide.org/docs/[Che Theia] is available as well but is planned to be removed in next releases.
+The default in-browser IDE in a new workspace is link:https://github.com/che-incubator/che-code[Microsoft Visual Studio Code - Open Source]. In addition, link:https://github.com/che-incubator/jetbrains-editor-images[Community Editions of JetBrains IntelliJ IDEA and JetBrains PyCharm] are available as link:https://access.redhat.com/support/offerings/techpreview[Technology Preview] features. link:https://theia-ide.org/docs/[Che-Theia] is deprecated and will be removed in the next release.
 
 You can select another supported in-browser IDE by either method:
 
