--- a/modules/end-user-guide/examples/snip_che-table-of-supported-editors.adoc
+++ b/modules/end-user-guide/examples/snip_che-table-of-supported-editors.adoc
@@ -1,4 +1,4 @@
-| link:https://github.com/che-incubator/che-code[Visual Studio Code - Open Source]
+| link:https://github.com/che-incubator/che-code[Microsoft Visual Studio Code - Open Source]
 | `che-incubator/che-code/insiders`
 | This is the default IDE that loads in a new workspace when the URL parameter or `che-editor.yaml` is not used.
 
