--- a/modules/end-user-guide/examples/snip_che-table-of-supported-editors.adoc
+++ b/modules/end-user-guide/examples/snip_che-table-of-supported-editors.adoc
@@ -2,7 +2,7 @@
 | `che-incubator/che-code/insiders`
 | This is the default IDE that loads in a new workspace when the URL parameter or `che-editor.yaml` is not used.
 
-| link:https://www.jetbrains.com/help/idea/discover-intellij-idea.html[IntelliJ IDEA]
+| link:https://www.jetbrains.com/help/idea/discover-intellij-idea.html[JetBrains IntelliJ IDEA Community Edition]
 | `che-incubator/che-idea/latest`
 | Community Edition - stable version
 
