--- a/modules/end-user-guide/examples/snip_che-table-of-supported-editors.adoc
+++ b/modules/end-user-guide/examples/snip_che-table-of-supported-editors.adoc
@@ -14,7 +14,7 @@
 | `che-incubator/che-pycharm/latest`
 | Community Edition - stable version
 
-| link:https://www.jetbrains.com/help/pycharm/quick-start-guide.html[PyCharm]
+| link:https://www.jetbrains.com/help/pycharm/quick-start-guide.html[JetBrains PyCharm Community Edition]
 | `che-incubator/che-pycharm/next`
 | Community Edition - development version
 
