--- a/modules/end-user-guide/examples/snip_che-table-of-supported-editors.adoc
+++ b/modules/end-user-guide/examples/snip_che-table-of-supported-editors.adoc
@@ -16,7 +16,7 @@
 
 | link:https://www.jetbrains.com/help/pycharm/quick-start-guide.html[JetBrains PyCharm Community Edition]
 | `che-incubator/che-pycharm/next`
-| Community Edition - development version
+| Development version
 
 | link:https://github.com/eclipse-che/che-theia[Che-Theia]
 | `eclipse/che-theia/latest`
