Update "Che-Theia" to "Eclipse Theia"

--- a/modules/end-user-guide/examples/snip_che-table-of-supported-editors.adoc
+++ b/modules/end-user-guide/examples/snip_che-table-of-supported-editors.adoc
@@ -18,10 +18,10 @@
 | `che-incubator/che-pycharm/next`
 | Development version
 
-| link:https://github.com/eclipse-che/che-theia[Che-Theia]
+| link:https://github.com/eclipse-che/che-theia[Eclipse Theia]
 | `eclipse/che-theia/latest`
 | Stable version. Deprecated, will be removed in next releases.
 
-| link:https://github.com/eclipse-che/che-theia[Che-Theia]
+| link:https://github.com/eclipse-che/che-theia[Eclipse Theia]
 | `eclipse/che-theia/next`
 | Development version. Deprecated, will be removed in next releases.
