--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -2,9 +2,9 @@
 
 * xref:adopting-che.adoc[]
 ** xref:developer-workspaces.adoc[]
+** xref:stack-samples.adoc[]
 ** xref:first-time-contributors.adoc[]
 ** xref:benefits-of-pull-requests-review-in-che.adoc[]
-** xref:supported-languages.adoc[]
 * xref:user-onboarding.adoc[]
 ** xref:starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc[]
 ** xref:optional-parameters-for-the-urls-for-starting-a-new-workspace.adoc[]
