--- a/modules/end-user-guide/pages/adopting-che.adoc
+++ b/modules/end-user-guide/pages/adopting-che.adoc
@@ -12,4 +12,4 @@ To get started with adopting {prod-short} for your organization, you can read th
 * xref:developer-workspaces.adoc[]
 * xref:first-time-contributors.adoc[]
 * xref:benefits-of-pull-requests-review-in-che.adoc[]
-* xref:supported-languages.adoc[] 
+* xref:stack-samples.adoc[] 
