--- a/modules/end-user-guide/pages/stack-samples.adoc
+++ b/modules/end-user-guide/pages/stack-samples.adoc
@@ -2,7 +2,7 @@
 :description: Stack samples
 :keywords: user-guide, stacks
 :navtitle: Stack samples
-:page-aliases: Supported languages
+:page-aliases: supported-languages.adoc
 
 [id="stack-samples"]
 = Stack samples
