feat: Remove auto-generated che-server advanced configuration options from the docs
fixes https://github.com/eclipse/che/issues/21804

--- a/modules/administration-guide/pages/advanced-configuration-options-for-the-che-server-component.adoc
+++ b/modules/administration-guide/pages/advanced-configuration-options-for-the-che-server-component.adoc
@@ -13,5 +13,5 @@ The following section describes advanced deployment and configuration methods fo
 
 include::partial$con_understanding-che-server-advanced-configuration.adoc[leveloffset=+1]
 
-include::partial$ref_che-server-component-system-properties-reference.adoc[leveloffset=+1]
+// include::partial$ref_che-server-component-system-properties-reference.adoc[leveloffset=+1]
 
