move the page from admin to user guide

--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -35,6 +35,7 @@
 ** xref:mounting-configmaps.adoc[]
 * xref:requesting-persistent-storage-for-workspaces.adoc[]
 * xref:integrating-with-kubernetes.adoc[]
+** xref:managing-workspaces-with-apis.adoc[]
 ** xref:automatic-token-injection.adoc[]
 ** xref:navigating-che-from-openshift-developer-perspective.adoc[]
 ** xref:navigating-openshift-web-console-from-che.adoc[]
