--- a/modules/end-user-guide/pages/managing-workspaces-with-apis.adoc
+++ b/modules/end-user-guide/pages/managing-workspaces-with-apis.adoc
@@ -1,14 +1,15 @@
 :_content-type: ASSEMBLY
-:navtitle: Managing users' workspaces with OpenShift APIs
-:description: Managing users' workspaces with OpenShift APIs
+:navtitle: Managing workspaces with OpenShift APIs
+:description: Managing workspaces with OpenShift APIs
 :keywords: api, list workspaces, create workspace, restart workspace, stop workspace, start workspace, remove workspace
-:navtitle: Monitoring {prod-short} Server
 // :page-aliases:
 
-[id="managing-users-workspaces-with-apis"]
-= Managing users' workspaces with OpenShift APIs
+[id="managing-workspaces-with-apis"]
+= Managing workspaces with OpenShift APIs
 
 ...
+
+Consider writing this entire page as a reference. (If so, then rename all the files in `/partials/` and in the `include::` statements below from `proc_` to `ref_`.)
 
 include::partial$proc_listing-workspaces.adoc[leveloffset=+1]
 
