feat: Antora assembler

--- a/CONTRIBUTING.adoc
+++ b/CONTRIBUTING.adoc
@@ -26,8 +26,6 @@ TIP: For Antora, a https://docs.antora.org/antora/latest/module-directories/[_mo
 This project is referring to Modular Documentation modules as _content types_.
 To understand the nature of topics, see the link:https://redhat-documentation.github.io/modular-docs/#modular-docs-terms-definitions[Appendix A: Modular Documentation Terms and Definitions].
 
-pass:[<!-- vale RedHat.As = YES -->]
-
 * Use the link:https://www.atlassian.com/git/tutorials/comparing-workflows/forking-workflow[Git Forking Workflow].
 
 * link:https://www.eclipse.org/che/docs/che-7/hosted-che/[Eclipse Che hosted by Red Hat] is the recommended IDE to edit and build the content.
@@ -48,8 +46,6 @@ pass:[<!-- vale RedHat.As = YES -->]
 == The documentation workflow
 
 .Procedure
-pass:[<!-- vale RedHat.write = NO -->]
-
 . Contributor submits a code pull request in one of the Che repositories with a `status/doc-impact` label.
 
 . The author of the code pull request, or the reviewer ensures the code pull request contains a reference to a documentation pull request for the `main` branch of the `che-docs` repository:
@@ -71,8 +67,6 @@ pass:[<!-- vale RedHat.write = NO -->]
 . link:https://github.com/eclipse/che-docs/blob/main/RELEASE.adoc[Release Eclipse Che documentation].
 
 . https://github.com/eclipse-che/che-docs/blob/publication-builder/README.adoc[Publish Eclipse Che documentation].
-
-pass:[<!-- vale RedHat.write = YES -->]
 
 [id="reviewing-a-documentation-pull-request"]
 == Reviewing a documentation pull request
@@ -146,7 +140,7 @@ See xref:reviewing-a-documentation-pull-request[Reviewing a documentation pull r
 Create a link:https://docs.antora.org/antora/latest/page/[page] and add it to the navigation when:
 
 * It is meaningful to have a navigation entry
-* The content may receive link:https://docs.antora.org/antora/2.3/page/page-id/[cross-references].
+* The content might receive link:https://docs.antora.org/antora/2.3/page/page-id/[cross-references].
 Avoid cross-references to a page link:https://docs.antora.org/antora/2.3/page/page-id/#id-fragment[fragment].
 
 .Procedure
@@ -206,7 +200,7 @@ The page content type can be:
 Create a link:https://docs.antora.org/antora/2.3/page/partials-and-content-snippets/[partial] and add it to an assembly page when:
 
 * The content is a concept, procedure or reference to include in a page.
-* The content may not receive cross-references.
+* The content might not receive cross-references.
 
 .Procedure
 . Copy one of the templates in the `templates/partials` directory to `modules/__<guide_name>__/partials/__<lowercase_title>__.adoc`.
