--- a/modules/administration-guide/pages/defining-the-list-of-images-to-pull.adoc
+++ b/modules/administration-guide/pages/defining-the-list-of-images-to-pull.adoc
@@ -11,15 +11,10 @@ The {image-puller-name-short} can pre-pull most images, including scratch images
 
 .Procedure
 
-. Gather a list of relevant container images for prepulling by navigating to the `pass:c,a,q[{prod-url}]/plugin-registry/v3/external_images.txt` URL.
+. Gather a list of relevant container images to pull by navigating to the `pass:c,a,q[{prod-url}]/plugin-registry/v3/external_images.txt` URL.
 
-. Determine images from the list for pre-pulling. For faster workspace startup times, consider pre-pulling workspace related images such as `che-theia`, `che-machine-exec`, `che-theia-endpoint-runtime-binary`, and plug-in sidecar images.
+. Determine images from the list for pre-pulling. For faster workspace startup times, consider pulling workspace related images such as `che-theia`, `che-machine-exec`, `che-theia-endpoint-runtime-binary`, and plug-in sidecar images.
 
 .Additional resources
-
-pass:[<!-- vale CheDocs.Attributes = NO -->]
-
 * xref:installing-image-puller-on-openshift-using-the-web-console.adoc[]
 * xref:installing-image-puller-on-openshift-using-cli.adoc[]
-
-pass:[<!-- vale CheDocs.Attributes = YES -->]
