--- a/modules/extensions/partials/proc_installing-openshift-connector-in-che.adoc
+++ b/modules/extensions/partials/proc_installing-openshift-connector-in-che.adoc
@@ -16,9 +16,7 @@ To install and enable OpenShift Connector in a {prod-short} instance, use instru
 
 .Procedure
 
-// "Plugins" in the UI.
-pass:[<!-- vale RedHat.TermsErrors = NO -->]
-
+ifndef::page-module[pass:[<!-- vale RedHat.TermsErrors = NO -->] // Deactivate the `RedHat.TermsErrors` rule to accept "Plugins" in the UI.]
 
 Install OpenShift Connector in {prod-short} by adding it as an extension in the {prod-short} *Plugins* panel.
 
