--- a/modules/administration-guide/pages/creating-a-telemetry-plugin.adoc
+++ b/modules/administration-guide/pages/creating-a-telemetry-plugin.adoc
@@ -397,7 +397,7 @@ spec:
       plugins:                           <2>
       - 'http://apache-che.apps-crc.testing/plugin.yaml'
 ----
-<1> The editor Id to set default plug-ins for.
+<1> The editor identification to set the default plug-ins for.
 <2> List of URLs to devfile v2 plug-ins.
 
 
