review of PR 2476

--- a/modules/end-user-guide/pages/url-parameter-for-the-workspace-ide.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-the-workspace-ide.adoc
@@ -7,7 +7,7 @@
 [id="url-parameter-for-the-workspace-ide"]
 = URL parameter for the workspace IDE
 
-If the URL for starting a new workspace doesn't contain a URL parameter specifying the integrated development environment (IDE), the workspace loads with the default IDE: Che Theia.
+If the URL for starting a new workspace doesn't contain a URL parameter specifying the integrated development environment (IDE), the workspace loads with the default in-browser IDE, which is Microsoft Visual Studio Code - Open Source.
 
 The URL parameter for specifying another supported IDE is `che-editor=__<editor_key>__`:
 
@@ -16,8 +16,11 @@ The URL parameter for specifying another supported IDE is `che-editor=__<editor_
 pass:c,a,q[{prod-url}]#__<git_repository_url>__?che-editor=__<editor_key>__
 ----
 
+NOTE: The workspace IDE might be already set for a remote Git repository in the xref:selecting-an-in-browser-ide-for-all-workspaces-that-clone-the-same-git-repository.adoc[`che-editor.yaml` file of the repository].
+
 .The URL parameter `__<editor_key>__` values for supported IDEs 
 
+[cols="1,1a,1a"]
 |===
 | IDE | `__<editor_key>__` value | Note
 
