--- a/modules/end-user-guide/pages/selecting-a-workspace-ide.adoc
+++ b/modules/end-user-guide/pages/selecting-a-workspace-ide.adoc
@@ -7,7 +7,7 @@
 [id="selecting-a-workspace-ide"]
 = Selecting a workspace IDE
 
-The default in-browser IDE in a new workspace is link:https://github.com/che-incubator/che-code[Microsoft Visual Studio Code - Open Source]. In addition, link:https://github.com/che-incubator/jetbrains-editor-images[Community Editions of JetBrains IntelliJ IDEA and JetBrains PyCharm] are available as link:https://access.redhat.com/support/offerings/techpreview[Technology Preview] features. link:https://theia-ide.org/docs/[Eclipse Theia] is deprecated and will be removed in the next release.
+The default in-browser IDE in a new workspace is Microsoft Visual Studio Code - Open Source.
 
 You can select another supported in-browser IDE by either method:
 
@@ -16,6 +16,7 @@ You can select another supported in-browser IDE by either method:
 
 .Supported in-browser IDEs 
 
+[cols="1,1a,1a"]
 |===
 | IDE | `id` | Note
 
