VS Code is the new default IDE, Theia is deprecated (#2476)
* VS Code is the new IDE, Theia is deprecated

Signed-off-by: Mario Loriedo <mario.loriedo@gmail.com>

* Update modules/end-user-guide/pages/selecting-a-workspace-ide.adoc

Co-authored-by: Max Leonov <mleonov@redhat.com>

* Update modules/end-user-guide/examples/snip_che-table-of-supported-editors.adoc

Co-authored-by: Max Leonov <mleonov@redhat.com>

* Update modules/end-user-guide/examples/snip_che-table-of-supported-editors.adoc

Co-authored-by: Max Leonov <mleonov@redhat.com>

* Update modules/end-user-guide/examples/snip_che-table-of-supported-editors.adoc

Co-authored-by: Max Leonov <mleonov@redhat.com>

* Update modules/end-user-guide/examples/snip_che-table-of-supported-editors.adoc

Co-authored-by: Max Leonov <mleonov@redhat.com>

* Update "Che-Theia" to "Eclipse Theia"

* review of PR 2476

Signed-off-by: Mario Loriedo <mario.loriedo@gmail.com>
Co-authored-by: Max Leonov <mleonov@redhat.com>

--- a/modules/end-user-guide/pages/selecting-a-workspace-ide.adoc
+++ b/modules/end-user-guide/pages/selecting-a-workspace-ide.adoc
@@ -7,7 +7,7 @@
 [id="selecting-a-workspace-ide"]
 = Selecting a workspace IDE
 
-The default in-browser IDE in a new workspace is link:https://theia-ide.org/docs/[Che Theia]. In addition, link:https://github.com/che-incubator/che-code[Visual Studio Code] is available as a link:https://access.redhat.com/support/offerings/techpreview[Technology Preview] feature for non-restricted environments.
+The default in-browser IDE in a new workspace is Microsoft Visual Studio Code - Open Source.
 
 You can select another supported in-browser IDE by either method:
 
@@ -16,6 +16,7 @@ You can select another supported in-browser IDE by either method:
 
 .Supported in-browser IDEs 
 
+[cols="1,1a,1a"]
 |===
 | IDE | `id` | Note
 
