--- a/modules/end-user-guide/examples/snip_che-table-of-supported-editors.adoc
+++ b/modules/end-user-guide/examples/snip_che-table-of-supported-editors.adoc
@@ -1,27 +1,23 @@
-| link:https://github.com/eclipse-che/che-theia[Che-Theia]
-| `eclipse/che-theia/latest`
+| link:https://github.com/che-incubator/che-code[Microsoft Visual Studio Code - Open Source]
+| `che-incubator/che-code/insiders`
 | This is the default IDE that loads in a new workspace when the URL parameter or `che-editor.yaml` is not used.
 
-| link:https://github.com/eclipse-che/che-theia[Che-Theia]
-| `eclipse/che-theia/next`
-| When using the `next` link:https://github.com/che-incubator/chectl/[chectl] channel, this IDE loads as a default without the URL parameter.
+| link:https://github.com/che-incubator/jetbrains-editor-images[JetBrains IntelliJ IDEA Community Edition]
+|
+* `che-incubator/che-idea/latest`
+* `che-incubator/che-idea/next`
+|
+* `latest` is the stable version.
+* `next` is the development version.
 
-| link:https://github.com/che-incubator/che-code[Visual Studio Code - Open Source]
-| `che-incubator/che-code/insiders`
-| Visual Studio Code Insiders version packaged to run on Kubernetes
+| link:https://github.com/che-incubator/jetbrains-editor-images[JetBrains PyCharm Community Edition]
+|
+* `che-incubator/che-pycharm/latest`
+* `che-incubator/che-pycharm/next`
+|
+* `latest` is the stable version.
+* `next` is the development version.
 
-| link:https://www.jetbrains.com/help/idea/discover-intellij-idea.html[IntelliJ IDEA]
-| `che-incubator/che-idea/latest`
-| Community Edition - stable version
-
-| link:https://www.jetbrains.com/help/idea/discover-intellij-idea.html[IntelliJ IDEA]
-| `che-incubator/che-idea/next`
-| Community Edition - development version
-
-| link:https://www.jetbrains.com/help/pycharm/quick-start-guide.html[PyCharm]
-| `che-incubator/che-pycharm/latest`
-| Community Edition - stable version
-
-| link:https://www.jetbrains.com/help/pycharm/quick-start-guide.html[PyCharm]
-| `che-incubator/che-pycharm/next`
-| Community Edition - development version
+| link:https://github.com/eclipse-che/che-theia[Eclipse Theia]
+| `eclipse/che-theia/latest`
+| Stable and planned for deprecation and removal in future releases.
