--- a/modules/end-user-guide/examples/snip_che-table-of-supported-editors.adoc
+++ b/modules/end-user-guide/examples/snip_che-table-of-supported-editors.adoc
@@ -20,4 +20,4 @@
 
 | link:https://github.com/eclipse-che/che-theia[Eclipse Theia]
 | `eclipse/che-theia/latest`
-| Stable and planned for deprecation and removal in future releases.
+| *Deprecated and will be removed in a future release.*
