--- a/modules/administration-guide/pages/uninstalling-che.adoc
+++ b/modules/administration-guide/pages/uninstalling-che.adoc
@@ -20,7 +20,7 @@ To uninstall an instance of {prod} {prod-ver}:
 
 .Procedure
 
-* Remove the {prod-short} instance from the `{prod-namespace}` {orch-namespace}:
+* Remove the {prod-short} instance:
 +
 [subs="+attributes,quotes"]
 ----
