--- a/modules/administration-guide/pages/uninstalling-che.adoc
+++ b/modules/administration-guide/pages/uninstalling-che.adoc
@@ -10,7 +10,7 @@
 
 WARNING: Uninstalling {prod-short} removes all {prod-short}-related user data!
 
-To uninstall an instance of {prod} {prod-ver}:
+Uninstall an instance of {prod}.
 
 .Prerequisites
 
@@ -28,8 +28,7 @@ $ {prod-cli} server:delete
 ----
 
 [TIP]
-
-----
+====
 Use the `--delete-namespace` flag to remove the {prod} namespace in addition to the instance.
 Use the `--delete:all` flag to remove the {devworkspace} operator in addition to the {prod} namespace and instance.
-----
+====
