--- a/modules/administration-guide/pages/uninstalling-che.adoc
+++ b/modules/administration-guide/pages/uninstalling-che.adoc
@@ -10,11 +10,9 @@
 
 WARNING: Uninstalling {prod-short} removes all {prod-short}-related user data!
 
-Uninstall an instance of {prod}.
+Use `{orch-cli}` to uninstall the {prod-short} instance.
 
 .Prerequisites
-
-* An active `{orch-cli}` session with administrative permissions to the destination {orch-name} cluster. See {orch-cli-link}.
 
 * `{prod-cli}`. See: xref:installing-the-chectl-management-tool.adoc[].
 
