--- a/modules/administration-guide/pages/uninstalling-che.adoc
+++ b/modules/administration-guide/pages/uninstalling-che.adoc
@@ -27,6 +27,6 @@ $ {prod-cli} server:delete
 
 [TIP]
 ====
-Use the `--delete-namespace` flag to remove the {prod} namespace in addition to the instance.
-Use the `--delete:all` flag to remove the {devworkspace} operator in addition to the {prod} namespace and instance.
+The `--delete-namespace` option also removes the {prod-short} namespace.
+The `--delete-all` option also removes the {devworkspace} Operator, the related resources, and the {prod-short} namespace.
 ====
