chore:  fix docs to remove mention of OS 3.11; use new script for collecting related images from CSVs instead of vague instructions about parsing external_images.txt, which doesn't have all the images (missing traefik and DWO project-clone); update antora variables to DWO 0.16
Signed-off-by: Nick Boldt <nboldt@redhat.com>

Max's suggestion, minus che-theia images, minus the duplicate footer line

Signed-off-by: Nick Boldt <nboldt@redhat.com>
Co-authored-by: Max Leonov <mleonov@redhat.com>

--- a/modules/administration-guide/pages/defining-the-list-of-images-to-pull.adoc
+++ b/modules/administration-guide/pages/defining-the-list-of-images-to-pull.adoc
@@ -7,13 +7,24 @@
 [id="defining-the-list-of-images-to-pull"]
 = Defining the list of images to pull
 
-The {image-puller-name-short} can pre-pull most images, including scratch images such as `che-machine-exec`. However, images that mount volumes in the Dockerfile, such as `traefik`, are not supported for pre-pulling on OpenShift 3.11.
+You can speed up workspace startup by using {image-puller-name-short} to pre-pull workspace-related images such as `che-code`, `che-machine-exec`, and the Universal Developer Image (`udi`) image.
+
+.Prerequisites
+
+* The `podman` CLI tool.
+* The `yq` CLI tool.
 
 .Procedure
 
-. Gather a list of relevant container images to pull by navigating to the `pass:c,a,q[{prod-url}]/plugin-registry/v3/external_images.txt` URL.
+* Get the latest {devworkspace} and {prod-short} operator bundle images, and parse the related images from the `ClusterServiceVersion` YAML file in the `/manifests/` folder into a simple list of container images:
 
-. Determine images from the list for pre-pulling. For faster workspace startup times, consider pulling workspace related images such as `che-theia`, `che-machine-exec`, `che-theia-endpoint-runtime-binary`, and plug-in sidecar images.
+[subs="+attributes"]
+----
+$ cd /tmp && \
+curl -sSLkO https://raw.githubusercontent.com/redhat-developer/devspaces/devspaces-3-rhel-8/product/getRelatedImages.sh && \
+chmod +x getRelatedImages.sh && \
+./getRelatedImages.sh -t {prod-ver-patch} -d {devworkspace-operator-version} --quiet
+----
 
 .Additional resources
 * xref:installing-image-puller-on-openshift-using-the-web-console.adoc[]
