chore: #21804 update che server config to use .spec.properties.server.properties for cheLogLevel and customCheProperties.CHE_LOGS_APPENDERS_IMPL, as CHE_WORKSPACE_DEFAULT__MEMORY__LIMIT__MB is obsolete
Signed-off-by: Nick Boldt <nboldt@redhat.com>

update sample - still need to verify this works

Signed-off-by: Nick Boldt <nboldt@redhat.com>

Update con_understanding-che-server-advanced-configuration.adoc

--- a/modules/administration-guide/partials/con_understanding-che-server-advanced-configuration.adoc
+++ b/modules/administration-guide/partials/con_understanding-che-server-advanced-configuration.adoc
@@ -22,11 +22,13 @@ map of additional environment variables to apply to the {prod-short} server comp
 +
 [source,yaml,subs="+quotes,+attributes,+macros"]
 ----
+apiVersion: org.eclipse.che/v2
+kind: CheCluster
 spec:
   components:
     cheServer:
       extraProperties:
-        pass:[CHE_WORKSPACE_DEFAULT__MEMORY__LIMIT__MB]: "2048"
+        CHE_LOGS_APPENDERS_IMPL: json
 ----
 ====
 
