--- a/modules/end-user-guide/partials/ref_parameters-for-che-editor-yaml.adoc
+++ b/modules/end-user-guide/partials/ref_parameters-for-che-editor-yaml.adoc
@@ -78,7 +78,7 @@ registryUrl: __<url_of_custom_plug-in_registry>__
 ... # <1>
 override:
   containers:
-    - name: theia-ide
+    - name: intellij-ide
       memoryLimit: 1280Mi
       cpuLimit: 1510m
       cpuRequest: 102m
