--- a/modules/administration-guide/pages/uninstalling-che.adoc
+++ b/modules/administration-guide/pages/uninstalling-che.adoc
@@ -27,7 +27,7 @@ $ {prod-cli} server:delete
 
 [TIP]
 ====
-The `--delete-namespace` option also removes the {prod-short} namespace.
+The `--delete-namespace` option removes the {prod-short} namespace.
 
-The `--delete-all` option also removes the {devworkspace} Operator, the related resources, and the {prod-short} namespace.
+The `--delete-all` option removes the {devworkspace} Operator and the related resources. The {prod-short} namespace isn't removed.
 ====
