--- a/modules/administration-guide/pages/uninstalling-che.adoc
+++ b/modules/administration-guide/pages/uninstalling-che.adoc
@@ -29,5 +29,5 @@ $ {prod-cli} server:delete
 ====
 The `--delete-namespace` option removes the {prod-short} namespace.
 
-The `--delete-all` option removes the {devworkspace} Operator and the related resources. The {prod-short} namespace isn't removed.
+The `--delete-all` option removes the {devworkspace} Operator and the related resources.
 ====
