--- a/modules/administration-guide/pages/defining-the-list-of-images-to-pull.adoc
+++ b/modules/administration-guide/pages/defining-the-list-of-images-to-pull.adoc
@@ -7,7 +7,7 @@
 [id="defining-the-list-of-images-to-pull"]
 = Defining the list of images to pull
 
-You can speed up workspace startup by using {image-puller-name-short} to pre-pull workspace-related images such as `che-code`, `che-machine-exec`, and the Universal Developer Image (`udi`) image.
+To speed up workspace startup, you can configure {image-puller-name-short} to cache workspace-related images such as `che-code`, `che-machine-exec`, and the Universal Developer Image (`udi`) image.
 
 .Prerequisites
 
