--- a/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
+++ b/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
@@ -1,9 +1,8 @@
 :_content-type: PROCEDURE
-:navtitle: Installing {prod-short} on Minikube with Keyclaok as the OIDC provider
+:navtitle: Installing {prod-short} on Minikube with Keycloak as the OIDC provider
 :description: Installing {prod-short} on Minikube with Keycloak as the OIDC provider
 :keywords: overview, installing-che-on-minikube-keycloak-oidc
 :page-aliases: installation-guide:installing-che-on-minikube-keycloak-oidc, overview:installing-che-on-minikube-keycloak-oidc
-
 
 [id="installing-{prod-id-short}-on-minikube-keycloak-oidc"]
 = Installing {prod-short} on Minikube with Keycloak as the OIDC provider
