--- a/modules/administration-guide/partials/con_a-workspace-example.adoc
+++ b/modules/administration-guide/partials/con_a-workspace-example.adoc
@@ -34,35 +34,41 @@ commands:
 
 This table provides the memory requirements for each workspace component:
 
-[cols="1,3,1,1", options="header"]
+[cols="1a,1a,1a,1a,1a", options="header"]
 .Total workspace memory requirement and limit
 |===
+|Purpose
 |Pod
 |Container name
 |Default memory limit
 |Default memory request
 
-|Workspace
-|`theia-ide`
-|512 Mi
-|64 Mi
-
-|Workspace
-|`machine-exec`
-|128 Mi
-|32 Mi
-
-|Workspace
-|`tools`
-|4 Gi
-|64 Mi
-
-|Workspace
+|{prod-short} gateway
+|`workspace`
 |`che-gateway`
 |256 Mi
 |64 Mi
 
-2+>s|Total
->s|4.9 Gi
->s|224 Mi
+|Editor
+|`workspace`
+|`che-code`
+|128 MiB
+|32 MiB
+
+|Developer tools
+|`workspace`
+|`universal-developer-image`
+|1 GiB
+|256 MiB
+
+|Clone the project
+|`workspace`
+|`project-clone`
+|1 GiB
+|128 MiB
+
+
+3+>s|Total
+>s|2.4 GiB
+>s|480 MiB
 |===
