--- a/modules/administration-guide/partials/con_operator-requirements.adoc
+++ b/modules/administration-guide/partials/con_operator-requirements.adoc
@@ -5,46 +5,83 @@
 
 The {prod-short} Operator manages six operands running in six distinct pods. The following table presents the default resource requirements of each of these operands.
 
-[cols="2,2,1,1", options="header"]
+[cols="1a,1a,1a,1a,1a", options="header"]
 .{prod-short} operator operands
 |===
-|Pod
+|Purpose
+|Pod name
 |Container names
 |Default memory limit
 |Default memory request
 
 |{prod-short} Server
-|{prod-short}
-|1 Gi
-|512 MiB
-
-|{prod-short} Gateway
-|`gateway`, `configbump`, `oauth-proxy`, `kube-rbac-proxy`
-| 4 Gi, 256Mi, 512Mi, 512Mi
-| 128 Mi, 64Mi, 64Mi, 64Mi
+|`{prod-id-short}`
+|* `{prod-id-short}-server`
+|* 1 Gi
+|* 512 MiB
 
 |{prod-short} Dashboard
-|`{prod-short}-dashboard`
-|256 Mi
-|32 Mi
+|`{prod-id-short}-dashboard`
+|* `{prod-id-short}-dashboard`
+|* 256 MiB
+|* 32 MiB
 
-|PostgreSQL
-|`postgres`
-|1 Gi
-|512 Mi
+|{prod-short} Gateway
+|`{prod-id-short}-gateway`
+|
+* `traefik`
+* `configbump`
+* `oauth-proxy`
+* `kube-rbac-proxy`
+|
+* 4 GiB
+* 256 MiB
+* 512 MiB
+* 512 MiB
+|
+* 128 MiB
+* 64 MiB
+* 64 MiB
+* 64 MiB
 
 |Devfile registry
-|`che-devfile-registry`
-|256 Mi
-|32 Mi
+|`devfile-registry`
+|* `devfile-registry`
+|* 256 Mi
+|* 32 Mi
 
 |Plug-in registry
-|`che-plugin-registry`
-|256 Mi
-|32 Mi
+|`plugin-registry`
+|* `plugin-registry`
+|* 256 Mi
+|* 32 Mi
+
+|PostgreSQL database
+|`postgres`
+|* `postgres`
+|* 1 Gi
+|* 512 Mi
+
 |===
 
 The {prod-short} Operator, which powers all the operands, consists of a single container with the `64Mi` memory request and `256Mi` limit. These default values are sufficient when the {prod-short} Operator manages a relatively big amount of {prod-short} workspaces. For even larger deployments, consider increasing the defaults.
+
+[cols="1a,1a,1a,1a,1a", options="header"]
+.{prod-short} operator
+|===
+|Purpose
+|Pod name
+|Container names
+|Default memory limit
+|Default memory request
+
+|{prod-short} operator
+|`{prod-id-short}-operator`
+|* `{prod-id-short}-operator`
+|* 256 MiB
+|* 64 MiB
+
+|===
 
 .Additional resources
 
