--- a/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
+++ b/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
@@ -1,4 +1,4 @@
-:_content-type: ASSEMBLY
+:_content-type: PROCEDURE
 :description: Calculating {prod-short} resource requirements
 :keywords: administration-guide, calculating-che-resource-requirements
 :navtitle: Calculating Che resource requirements
@@ -8,21 +8,166 @@
 [id="calculating-{prod-id-short}-resource-requirements"]
 = Calculating {prod-short} resource requirements
 
+The {prod-short} Operator, {devworkspace} Controller, and user workspaces consist of a set of pods.
+The pods contribute to the resource consumption in CPU and memory limits and requests.
+Learn how to calculate resources, such as memory and CPU, required to run {prod}.
 
-The {prod-short} Operator, {devworkspace} Controller, and user workspaces consist of a set of pods. The pods contribute to the resource consumption in terms of CPU and RAM limits and requests. Learn how to calculate resources, such as memory and CPU, required to run {prod}.
+.Procedure
+. Identify the workspace components explicitly specified in the `components` section of your devfile.
+When this section is empty {prod-short} only loads the implicit components.
++
+[cols="1a,1a,1a,1a,1a",options="header"]
+.Devfile specified workspace components memory requirements
+|===
+|Purpose
+|Pod
+|Container name
+|Memory limit
+|Memory request
 
-include::partial$con_operator-requirements.adoc[leveloffset=+1]
+|Your developer tools
+|`workspace`
+|
+|
+|
 
-include::partial$con_controller-requirements.adoc[leveloffset=+1]
+|Your editor
+|`workspace`
+|
+|
+|
 
-include::partial$proc_workspaces-requirements.adoc[leveloffset=+1]
+3+>s|Total
+>s|
+>s|
+|===
+. Identify the implicit workspace components that {prod-short} loads: developer tools, editor, and {prod-short} gateway.
++
+[cols="1a,1a,1a,1a,1a",options="header"]
+.Implicit workspace components memory requirements
+|===
+|Purpose
+|Pod
+|Container name
+|Default memory limit
+|Default memory request
 
-include::partial$con_a-workspace-example.adoc[leveloffset=+1]
+|Developer tools
+|`workspace`
+|`universal-developer-image`
+|1 GiB
+|256 MiB
 
-.Additional resources
+|Editor
+|`workspace`
+|`che-code`
+|128 MiB
+|32 MiB
 
-* xref:architecture-overview.adoc[]
-* xref:understanding-the-checluster-custom-resource.adoc[]
-* link:https://github.com/eclipse-che/che-plugin-registry[{prod-short} plug-ins registry repository]
-* link:https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/[Kubernetes resource management for pods and containers]
+|{prod-short} gateway
+|`workspace`
+|`che-gateway`
+|256 Mi
+|64 Mi
+
+3+>s|Total
+>s|2.4 GiB
+>s|480 MiB
+|===
+
+
+. Sum up the resources required for each workspace, and multiply by the running workspaces count.
+
+. Sum up with the server components requirements.
++
+[cols="1a,1a,1a,1a,1a",options="header"]
+.{prod-short} operator operands
+|===
+|Purpose
+|Pod name
+|Container names
+|Default memory limit
+|Default memory request
+
+|{prod-short} operator
+|`{prod-id-short}-operator`
+|* `{prod-id-short}-operator`
+|* 256 MiB
+|* 64 MiB
+
+|{prod-short} Server
+|`{prod-id-short}`
+|* `{prod-id-short}-server`
+|* 1 Gi
+|* 512 MiB
+
+|{prod-short} Dashboard
+|`{prod-id-short}-dashboard`
+|* `{prod-id-short}-dashboard`
+|* 256 MiB
+|* 32 MiB
+
+|{prod-short} Gateway
+|`{prod-id-short}-gateway`
+|
+* `traefik`
+* `configbump`
+* `oauth-proxy`
+* `kube-rbac-proxy`
+|
+* 4 GiB
+* 256 MiB
+* 512 MiB
+* 512 MiB
+|
+* 128 MiB
+* 64 MiB
+* 64 MiB
+* 64 MiB
+
+|Devfile registry
+|`devfile-registry`
+|* `devfile-registry`
+|* 256 Mi
+|* 32 Mi
+
+|Plugin registry
+|`plugin-registry`
+|* `plugin-registry`
+|* 256 Mi
+|* 32 Mi
+
+|PostgreSQL database
+|`postgres`
+|* `postgres`
+|* 1 Gi
+|* 512 Mi
+
+|{devworkspace} Controller Manager
+|`{devworkspace-id}-controller-manager`
+|* `{devworkspace-id}-controller`
+* `kube-rbac-proxy`
+|* 1 GiB
+* N/A
+|* 100 MiB
+* N/A
+
+|{devworkspace} Operator Catalog
+|
+|* `registry-server`
+|* N/A
+|* 50 MiB
+
+|{devworkspace} Webhook Server
+| `{devworkspace-id}-webhook-server`
+|* `{devworkspace-id}-controller`
+* `kube-rbac-proxy`
+|* 300 MiB
+|* 20 MiB
+
+3+>s|Total
+>s|9.5 GiB
+>s|1.6 GiB
+
+|===
 
