--- a/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
+++ b/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
@@ -14,7 +14,7 @@ Learn how to calculate resources, such as memory and CPU, required to run {prod}
 
 .Procedure
 . Identify the workspace components explicitly specified in the `components` section of your devfile.
-When this section is empty {prod-short} only loads the implicit components.
+When this section is empty, {prod-short} only loads the implicit components.
 +
 [cols="1a,1a,1a,1a,1a",options="header"]
 .Devfile specified workspace components memory requirements
