Apply suggestions from code review
Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

--- a/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
+++ b/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
@@ -76,9 +76,9 @@ When this section is empty, {prod-short} only loads the implicit components.
 |===
 
 
-. Sum up the resources required for each workspace, and multiply by the running workspaces count.
+. Sum up the resources required for each workspace, and multiply them by the running workspaces count.
 
-. Sum up with the server components requirements.
+. Sum up the server components requirements.
 +
 [cols="1a,1a,1a,1a,1a",options="header"]
 .{prod-short} operator operands
