--- a/modules/administration-guide/pages/managing-ide-extensions.adoc
+++ b/modules/administration-guide/pages/managing-ide-extensions.adoc
@@ -1,3 +1,4 @@
+:_content-type: ASSEMBLY
 :description: Managing IDE extensions
 :keywords: extensions, plugins, plug-ins, registry
 :navtitle: Managing IDE extensions
