--- a/modules/administration-guide/pages/managing-ide-extensions.adoc
+++ b/modules/administration-guide/pages/managing-ide-extensions.adoc
@@ -1,4 +1,5 @@
 :_content-type: ASSEMBLY
+:_content-type: CONCEPT
 :description: Managing IDE extensions
 :keywords: extensions, plugins, plug-ins, registry
 :navtitle: Managing IDE extensions
