--- a/modules/administration-guide/pages/managing-ide-extensions.adoc
+++ b/modules/administration-guide/pages/managing-ide-extensions.adoc
@@ -7,8 +7,7 @@
 [id="managing-ide-extensions"]
 = Managing IDE extensions
 
-A paragraph or more of an explanation of how managing IDE extensions/plugins is different when using Che compared to installing extensions for locally installed IDEs.
-
-Mention both: "extensions or plugins"
+All IDEs use extensions or plugins to extend the functionality. The mechanism of adding extensions into IDEs is different from one to another. 
+This section describes how to manage extensions for editors in {prod-short}.
 
 * xref:extensions-for-microsoft-visual-studio-code-open-source.adoc[]
